house/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 80
      targetPort: 3000
#    - name: server
#      port: 3000
#      targetPort: 3000
  selector:
    app: house
