house/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - churrer.xyz
      - house-api.churrer.xyz
      secretName: house-tls
  rules:
  - host: "churrer.xyz"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: house
            port:
              number: 80
#  - host: "house-api.churrer.xyz"
#    http:
#      paths:
#        - pathType: Prefix
#          path: "/"
#          backend:
#            service:
#              name: house
#              port:
#                number: 3000
